changed models settings

--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -66,7 +66,7 @@
                     </div>
                     
                     <div>
-                        <h2 class="about__subtitle">I'am {{member.firstname}}</h2>
+                        <h2 class="about__subtitle">I'am {{member.firstname}} {{member.lastname}}</h2>
                         <p class="about__text">{{member.aboutme}}</p>           
                     </div>                                   
                 </div>
