--- a/templates/account/components/menu.html
+++ b/templates/account/components/menu.html
@@ -13,13 +13,13 @@
                 <li class="nav-item">
                     <a class="nav-link active" href="{% url 'account_logout' %}">Sign Out</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="{% url 'account_email' %}">Change E-mail</a>
-                </li>
                 <ul class="nav justify-content-end">
                   <li class="nav-item">
                     <a class="nav-link active" href="{% url 'portfolio' %}">Portfolio</a>
                   </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="{% url 'details' %}">View Details</a>
+                </li>
                 </ul>
             {% else %}
             
