--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -10,70 +10,160 @@
 
 {% block content %}
 <style>
-    .myButton {
-        box-shadow: 0px 0px 0px 0px #f0f7fa;
-        background:linear-gradient(to bottom, #4287f5 5%, #4287f5 100%);
-        background-color:#4287f5;
-        border:1px solid #236994;
-        display:inline-block;
-        cursor:pointer;
-        color:#ffffff;
-        font-family:Arial;
-        font-size:21px;
-        padding:11px;
-        text-decoration:none;
-        text-shadow:0px -1px 0px #5b6178;
-    }
-    .myButton:hover {
-        background:linear-gradient(to bottom, #4287f5 5%, #4287f5 100%);
-        background-color:#4287f5;
-    }
-    .myButton:active {
-        position:relative;
-        top:1px;
-    }
-
+    :root {
+        --input-padding-x: 1.5rem;
+        --input-padding-y: .75rem;
+      }
+      
+      body {
+        background: #007bff;
+        background: linear-gradient(to right, #0062E6, #33AEFF);
+      }
+      
+      .card-signin {
+        border: 0;
+        border-radius: 1rem;
+        box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
+        overflow: hidden;
+      }
+      
+      .card-signin .card-title {
+        margin-bottom: 2rem;
+        font-weight: 300;
+        font-size: 1.5rem;
+      }
+      
+      .card-signin .card-img-left {
+        width: 45%;
+        /* Link to your background image using in the property below! */
+        background: scroll center url('https://source.unsplash.com/WEQbe2jBg40/414x512');
+        background-size: cover;
+      }
+      
+      .card-signin .card-body {
+        padding: 2rem;
+      }
+      
+      .form-signin {
+        width: 100%;
+      }
+      
+      .form-signin .btn {
+        font-size: 80%;
+        border-radius: 5rem;
+        letter-spacing: .1rem;
+        font-weight: bold;
+        padding: 1rem;
+        transition: all 0.2s;
+      }
+      
+      .form-label-group {
+        position: relative;
+        margin-bottom: 1rem;
+      }
+      
+      .form-label-group input {
+        height: auto;
+        border-radius: 2rem;
+      }
+      
+      .form-label-group>input,
+      .form-label-group>label {
+        padding: var(--input-padding-y) var(--input-padding-x);
+      }
+      
+      .form-label-group>label {
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: block;
+        width: 100%;
+        margin-bottom: 0;
+        /* Override default `<label>` margin */
+        line-height: 1.5;
+        color: #495057;
+        border: 1px solid transparent;
+        border-radius: .25rem;
+        transition: all .1s ease-in-out;
+      }
+      
+      .form-label-group input::-webkit-input-placeholder {
+        color: transparent;
+      }
+      
+      .form-label-group input:-ms-input-placeholder {
+        color: transparent;
+      }
+      
+      .form-label-group input::-ms-input-placeholder {
+        color: transparent;
+      }
+      
+      .form-label-group input::-moz-placeholder {
+        color: transparent;
+      }
+      
+      .form-label-group input::placeholder {
+        color: transparent;
+      }
+      
+      .form-label-group input:not(:placeholder-shown) {
+        padding-top: calc(var(--input-padding-y) + var(--input-padding-y) * (2 / 3));
+        padding-bottom: calc(var(--input-padding-y) / 3);
+      }
+      
+      .form-label-group input:not(:placeholder-shown)~label {
+        padding-top: calc(var(--input-padding-y) / 3);
+        padding-bottom: calc(var(--input-padding-y) / 3);
+        font-size: 12px;
+        color: #777;
+      }
+      
+      .btn-google {
+        color: white;
+        background-color: #ea4335;
+      }
+      
+      .btn-facebook {
+        color: white;
+        background-color: #3b5998;
+      }      
 </style>
-    <!--<div class="row text-center align-items-center mt-5 justify-content-center">-->
-        <div class="container mt-5 text-center align-items-center">
-        
-			<h2>Sign In</h2>
-	
+<body>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-10 col-xl-9 mx-auto">
+          <div class="card card-signin flex-row my-5">
+            <div class="card-img-left d-none d-md-flex">
+               <!-- Background image for card set in CSS! -->
+            </div>
+            <div class="card-body">
+              <h5 class="card-title text-center">Sign In</h5>
+              <form class="form-signin login" method="POST" action="/accounts/login/">
+                {% csrf_token%}
+                <div class="form-label-group">
+                  <input name="login" type="text" id="inputUserame" class="form-control" placeholder="Username" required autofocus>
+                  <label for="inputUserame">Username</label>
+                </div>
+                <div class="form-label-group">
+                  <input name="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                  <label  for="inputPassword">Password</label>
+                </div>
+                {% if redirect_field_value %}
+                    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                {% endif %}
+                <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Sign In</button>
 
-        {% get_providers as socialaccount_providers %}
-
-        {% if socialaccount_providers %}
-        <p>{% blocktrans with site.name as site_name %}Please sign in with one
-        of your existing google account. {% endblocktrans %}</p>
-
-        <div class="socialaccount_ballot">
-
-        <a class="myButton socialaccount_provider google" href="/accounts/google/login/?process=login"><img src="{% static 'images/google.png'%}">Sign In With Google</a>          
-            
-    
-        <div class="login-or">{% trans 'or' %}</div>
-
-        </div>
-
-        {% include "socialaccount/snippets/login_extra.html" %}
-
-        {% else %}
-        <p>{% blocktrans %}If you have not created an account yet, then please
-        <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
-        {% endif %}
-        <div class="text-start">
-            <form class="login" method="POST" action="{% url 'account_login' %}">
-            {% csrf_token %}
-            {% bootstrap_form form %}
-            {% if redirect_field_value %}
-                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-            {% endif %}
-            <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-            {% buttons %}
-                <button type="submit" class="btn btn-primary">{% trans "Sign In" %}</button>
-            {% endbuttons %}
             </form>
+            
+                <hr class="my-4">
+                <a href="/accounts/google/login/?process=login" class="socialaccount_provider google btn btn-lg btn-google btn-block text-uppercase" type="submit"><i class="fab fa-google mr-2"></i> Sign In with Google</a>
+            
+            </div>
+          </div>
         </div>
+      </div>
     </div>
-</main>
+  </body>
+  
 {% endblock %}
